added tables to index file

--- a/index.html
+++ b/index.html
@@ -41,6 +41,38 @@ h1<!DOCTYPE html>
 
    <br>
 <br>
+<section>
+    <table>
+        <tr>
+            <th> S.NO </th>
+            <th> peaky members </th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Thomas shelby</td>
+        </tr>
+        ><tr>
+            <td>2</td>
+            <td>Athur shelby</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>john shelby</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>polly</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>grace</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Ada</td>
+        </tr>
+      </table>
+</section>
 <a href="/images/exercise.html"
 target="_blank">submit</a>
 
