change index file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h1<!DOCTYPE html>
     <table>
         <tr>
             <th> S.NO </th>
-            <th> peaky members </th>
+            <th>shabbir </th>
         </tr>
         <tr>
             <td>1</td>
